--- a/OverseasShopping/app/src/main/AndroidManifest.xml
+++ b/OverseasShopping/app/src/main/AndroidManifest.xml
@@ -9,19 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!--<activity-->
+            <!--android:name=".ProductActivity">-->
+        <!--</activity>-->
+        <!--<activity-->
+            <!--android:name=".ProductListActivity">-->
+        <!--</activity>-->
+        <!--<activity-->
+            <!--android:name=".RegisterActivity"-->
+            <!--android:theme="@style/Theme.AppCompat.NoActionBar" />-->
         <activity
-            android:name=".ProductActivity">
-        </activity>
-        <activity
-            android:name=".ProductListActivity">
-        </activity>
-        <activity
-            android:name=".RegisterActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
-        <activity
-            android:name=".LoginActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize">
+            android:name=".ChatActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+            //android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,13 +29,13 @@
             </intent-filter>
 
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
-        </activity>
+        <!--<activity-->
+            <!--android:name=".MainActivity"-->
+            <!--android:label="@string/app_name">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
 
         <meta-data
             android:name="preloaded_fonts"
