--- a/OverseasShopping/app/src/main/AndroidManifest.xml
+++ b/OverseasShopping/app/src/main/AndroidManifest.xml
@@ -19,9 +19,12 @@
             <!--android:name=".RegisterActivity"-->
             <!--android:theme="@style/Theme.AppCompat.NoActionBar" />-->
         <activity
-            android:name=".ChatActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
-            //android:windowSoftInputMode="stateHidden|adjustResize">
+            android:name=".LoginActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
+
+        <activity
+            android:name=".ChatActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,13 +32,13 @@
             </intent-filter>
 
         </activity>
-        <!--<activity-->
-            <!--android:name=".MainActivity"-->
-            <!--android:label="@string/app_name">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
