--- a/OverseasShopping/app/src/main/AndroidManifest.xml
+++ b/OverseasShopping/app/src/main/AndroidManifest.xml
@@ -13,17 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ProductActivity">
-        </activity>
-        <activity
-            android:name=".ProductListActivity">
-        </activity>
-        <activity
-            android:name=".RegisterActivity">
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
-
-        <activity
-            android:name=".ProductActivity">
+            android:name=".MessageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,35 +21,7 @@
             </intent-filter>
 
         </activity>
-        <activity
-            android:name=".ProductListActivity">
-        </activity>
-        <activity
-            android:name=".RegisterActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustPan"/>
-        <activity
-            android:name=".LoginActivity"
 
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-        </activity>
-        <activity
-            android:name=".ChatActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
-        </activity>
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.overseasshopping.fileprovider"
@@ -74,5 +36,6 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
+
 
 </manifest>
