--- a/OverseasShopping/app/src/main/AndroidManifest.xml
+++ b/OverseasShopping/app/src/main/AndroidManifest.xml
@@ -2,9 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.overseasshopping">
 
-    <uses-feature android:name="android.hardware.camera"
-        android:required="false" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,38 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".ProductActivity">
-        </activity>
-        <activity
-            android:name=".ProductListActivity">
-        </activity>
-        <activity
-            android:name=".RegisterActivity">
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
-
-        <activity
-            android:name=".ProductActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-        </activity>
-        <activity
-            android:name=".ProductListActivity">
-        </activity>
-        <activity
-            android:name=".RegisterActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustPan"/>
+        <!--<activity-->
+            <!--android:name=".ProductActivity">-->
+        <!--</activity>-->
+        <!--<activity-->
+            <!--android:name=".ProductListActivity">-->
+        <!--</activity>-->
+        <!--<activity-->
+            <!--android:name=".RegisterActivity"-->
+            <!--android:theme="@style/Theme.AppCompat.NoActionBar" />-->
         <activity
             android:name=".LoginActivity"
-
             android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-        </activity>
+            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
+
         <activity
             android:name=".ChatActivity">
             <intent-filter>
@@ -60,15 +39,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-        <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.example.overseasshopping.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/files"/>
-        </provider>
 
         <meta-data
             android:name="preloaded_fonts"
