--- a/OverseasShopping/app/src/main/AndroidManifest.xml
+++ b/OverseasShopping/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".MessageActivity">
+        </activity>
+        <activity
+            android:name=".MessageListActivity">
+        </activity>
+        <activity
             android:name=".ProductActivity">
         </activity>
         <activity
@@ -24,7 +30,6 @@
             android:windowSoftInputMode="stateHidden|adjustPan"/>
         <activity
             android:name=".LoginActivity"
-
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
@@ -41,11 +46,13 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.overseasshopping.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
+
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/files"/>
