--- a/OverseasShopping/app/src/main/AndroidManifest.xml
+++ b/OverseasShopping/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
         <activity android:name=".ProductDetailsActivity"></activity>
         <activity android:name=".MessageActivity"></activity>
         <activity android:name=".ProductActivity"></activity>
-        <activity android:name=".ProductListActivity">
+        <activity android:name=".ProductListActivity"></activity>
+        <activity android:name=".OrderHistoryActivity"></activity>
 
-        </activity>
         <activity
             android:name=".RegisterActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"
